--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@studio-freight/lenis": "^1.0.42",
+    "@types/imagesloaded": "^4.1.7",
+    "@types/three": "^0.179.0",
     "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -24,17 +26,20 @@
     "gsap": "^3.13.0",
     "heroicons": "^2.1.5",
     "html5-qrcode": "^2.3.8",
+    "imagesloaded": "^5.0.0",
     "lucide-react": "^0.323.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "radix-ui": "^1.0.1",
+    "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.3",
     "react-pageflip": "^2.0.3",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@types/node": "^20.16.1",
