--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@studio-freight/lenis": "^1.0.42",
     "@types/imagesloaded": "^4.1.7",
-    "@types/three": "^0.179.0",
     "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -38,8 +37,7 @@
     "react-markdown": "^9.0.3",
     "react-pageflip": "^2.0.3",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.179.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20.16.1",
